# flying_car_urdf

./: CMakeLists.txt  package.xml
config/: flying_car_ackermann_control.yaml  flying_car_control.yaml  joint_names_flying_car_urdf.yaml
include/flying_car_urdf/: astar.h
launch/: display.launch  flying_car_control.launch  gazebo.launch  gazebo_sdf.launch  gazebo_urdf.launch  posix_sitl.launch
meshes/: FL_arm_link.STL  FL_steer_link.STL  FL_wheel_link.STL  FR_arm_link.STL  FR_steer_link.STL  FR_wheel_link.STL  RL_arm_link.STL  RL_prop_link.STL  RL_steer_link.STL  RL_wheel_link.STL  RR_arm_link.STL  RR_prop_link.STL  RR_steer_link.STL  RR_wheel_link.STL  base_link.STL
scripts/: .flying_car_control.py.swp  flying_car_control.py  grid_publisher.py
src/: astar.cpp  astar_node.cpp
urdf/: flying_car.gazebo.xacro  flying_car.px4.xacro  flying_car.sdf  flying_car.urdf  flying_car.urdf.xacro  flying_car_urdf.csv
